--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,11 @@
-{% set provider= "TLS" %}
+{% set provider = "TLS" %}
 {% set version = "1.1.0" %}
 
 {% set name = "terraform-provider-" + provider.lower() %}
 {% set x4_plugin = name + '_v' + version + "_x4" %}
 
 {% set sha256 = "cf5a328267c510f713608b9a97bf7086e57a9ae91fa0f83ce7e8514e61d8b770" %}
-{% set sha256_win32 = "8f74ad73afb26ea3eedbad03e14078f7cb4c0c193b60b046319d35dfb86249fe" %}
-{% set sha256_win64 = "e3b7ac84442b375a0b301929bff412d4690a4b43f77f153762076b475adbbe65" %}
+{% set sha256_win64 = "b9b595106a1f8fb2dd6837e411678c50b512e3434bdc0fc158d28c971e3dabea" %}
 
 package:
   name: {{ name|lower }}
@@ -18,10 +17,8 @@ source:
   sha256: {{ sha256 }}  # [not win]
 
   url: https://releases.hashicorp.com/{{ name }}/{{ version }}/{{ name }}_{{ version }}_windows_386.zip  # [win32]
-  url: https://releases.hashicorp.com/{{ name }}/{{ version }}/{{ name }}_{{ version }}_windows_amd64.zip  # [win64]
   fn: {{ name }}-{{ version }}.zip  # [win]
   sha256: {{ sha256_win32 }}  # [win32]
-  sha256: {{ sha256_win64 }}  # [win64]
 
 build:
   number: 0
@@ -46,7 +43,7 @@ about:
   license: MPL 2.0
   summary: The Terraform {{ provider }} provider
   doc_url: https://www.terraform.io/docs/providers/{{ provider|lower }}/index.html
-  dev_url: https://https://github.com/terraform-providers/{{ name }}
+  dev_url: https://github.com/terraform-providers/{{ name }}
 
 extra:
   recipe-maintainers:
