--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set provider = "TLS" %}
-{% set goname = "github.com/terraform-providers/terraform-provider-"+provider.lower() %}'
+{% set goname = "github.com/terraform-providers/terraform-provider-"+provider.lower() %}
 {% set version = "1.2.0" %}
 
 {% set name = goname.split('/')[-1] %}
